test: replace JUnit with Spock